stick aims at the mouse

--- a/package.json
+++ b/package.json
@@ -5,5 +5,11 @@
   "license": "MIT",
   "dependencies": {
     "phaser": "^3.55.2"
+  },
+  "scripts": {
+    "start": "http-server"
+  },
+  "devDependencies": {
+    "http-server": "^14.1.1"
   }
 }
