--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "sandwich",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "dependencies": {
-    "phaser": "^3.55.2"
-  },
+  "name": "ld48",
+  "version": "0.0.0",
   "scripts": {
-    "start": "http-server"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview"
   },
   "devDependencies": {
-    "http-server": "^14.1.1"
+    "typescript": "^4.2.3",
+    "vite": "^2.1.5"
+  },
+  "dependencies": {
+    "phaser": "^3.54.0"
   }
 }
