--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ld48",
-  "version": "0.0.0",
+  "name": "sandwich",
+  "version": "1.0.0",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -11,6 +11,6 @@
     "vite": "^2.1.5"
   },
   "dependencies": {
-    "phaser": "^3.54.0"
+    "phaser": "^3.55.2"
   }
 }
